# providify

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  demo_describe.py  pyproject.toml
.claude/agent-memory/release-planner/: MEMORY.md  project_arch.md  project_jakarta_parity_scan.md
injectable/: __init__.py  container.py  exceptions.py  metadata.py  scope.py  type.py
injectable/decorator/: lifecycle.py  scope.py
providify/: __init__.py  binding.py  container.py  descriptor.py  exceptions.py  metadata.py  resolution.py  scanner.py  scope.py  type.py  utils.py
providify/decorator/: interceptor.py  lifecycle.py  scope.py
tests/: test_alternative.py  test_application_scoped.py  test_container.py  test_decorator_bean.py  test_decorators.py  test_default.py  test_dependent_track.py  test_describe.py  test_disposes.py  test_events.py  test_field_provider.py  test_generics.py  test_inject.py  test_injection_point.py  test_interceptor.py  test_lazy.py  test_live.py  test_mutation.py  test_named_meta.py  test_qualifier.py  test_run_in_scope.py  test_scanner.py  test_scoped_providers.py  test_scopes.py  test_stereotype.py
